<resources>
    <string name="app_name">Note Bloc</string>
    <string name="insert">Insert</string>
    <string name="digite_o_titulo">Digite o título</string>
    <string name="digite_a_nota">Digite a nota</string>
    <string name="editar">Editar</string>
    <string name="cancelar">Cancelar</string>
    <string name="inserir">Inserir</string>
    <string name="excluir">Excluir</string>
    <string name="buscar">Buscar</string>
    <string name="somar">Somar</string>
    <string name="ascendente">Ascendente</string>
    <string name="descendente">Descendente</string>
    <string name="ordenar">Ordenar</string>
</resources>