<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotaActivity">

    <EditText
        android:id="@+id/editTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/digite_o_titulo"
        android:textAlignment="center"
        android:background="@color/design_default_color_secondary_variant"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/editTitulo"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editNota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/digite_a_nota"
                android:layout_margin="8dp" />

            <Button
                android:id="@+id/btnEditInserir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/inserir"
                android:layout_marginTop="4dp" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancelar"/>

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/excluir"
                android:layout_marginBottom="24dp"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>